43616-114 removed text overflow from drawing tool buttons (Opera < 12 bug)

--- a/theme/norgeskart/_pure_style.scss
+++ b/theme/norgeskart/_pure_style.scss
@@ -2376,7 +2376,8 @@ focus for toolbar controls
 
       li {
         margin-top: 5px;
-
+        overflow: hidden;
+        
         &.text-only {
 
           button {
